add petition to api for long and lat

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -15,6 +15,9 @@
   font-weight: 400;
   border-radius: 1rem;
 }
+.form option {
+  color: var(--primary);
+}
 
 .field ::placeholder {
   color: var(--white);
